# Pyrrhasterized

./: .gitignore  .gitmodules  CMakeLists.txt  CompileShaders.vcxproj  Pyrrhasterized.sln  README.md  VulkanContext.cpp  VulkanContext.h  VulkanGeometryBuffers.cpp  VulkanImage.cpp  VulkanRenderer.cpp  VulkanRenderer.h  VulkanScene.h  VulkanTools.cpp  Vulkan_Base_Project.vcxproj  Vulkan_Base_Project.vcxproj.filters  imgui.ini  main.cpp  premake5.lua  run_debug.sh  run_release.sh  vkbaseproject.txt
Shaders/: CMakeLists.txt  compile.bat  compile.sh  fragmentTexture.spv  vertexShadow.vert  vertexTexture.spv  vertexTexture.vert
assets/: bunny.gltf
shaders/: CMakeLists.txt  CSM.mesh  compile.bat  compile.sh  fragmentCSM.frag  fragmentCSM.spv  fragmentDebugNormals.frag  fragmentDebugNormals.spv  fragmentDebugTangents.frag  fragmentDebugTextureCoords.frag  fragmentDebugTextureCoords.spv  fragmentDepth.frag  fragmentDepth.spv  fragmentDepthPrePass.frag  fragmentPBR.frag  fragmentPBR.spv  fragmentTangents.spv  fragmentTexture.frag  fragmentTexture.spv  fragmentTextureCSM.frag  fragmentTextureCSM.spv  (+18 more)
src/: CMakeLists.txt  Camera.cpp  Camera.h  Defs.h  DepthPrePass.cpp  DepthPrePass.h  DirectionalLight.cpp  DirectionalLight.h  Drawable.cpp  Drawable.h  Entity.cpp  Entity.h  GeometryTools.cpp  GeometryTools.h  Light.cpp  Light.h  MainRenderPass.cpp  MainRenderPass.h  Material.cpp  Material.h  Model.cpp  Model.h  Peach.cpp  Peach.h  PointLight.cpp  PointLight.h  SerializationTools.cpp  SerializationTools.h  ShadowCascadeRenderPass.cpp  ShadowCascadeRenderPass.h  ShadowRenderPass.cpp  ShadowRenderPass.h  Spotlight.cpp  Spotlight.h  VulkanContext.cpp  VulkanContext.h  VulkanGeometryBuffers.cpp  VulkanGeometryBuffers.h  VulkanImage.cpp  VulkanImage.h  (+11 more)
(+20 files in other folders)
